--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -188,7 +188,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7fM-Ox-pAX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7fM-Ox-pAX">
                                 <rect key="frame" x="0.0" y="0.0" width="120" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -262,17 +262,17 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="10" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7si-1v-3Bs">
-                                                    <rect key="frame" x="2" y="30" width="139" height="101"/>
+                                                    <rect key="frame" x="2" y="35" width="139" height="96"/>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9ZU-TR-mRF">
-                                                    <rect key="frame" x="146" y="40" width="1" height="83"/>
+                                                    <rect key="frame" x="146" y="45" width="1" height="78"/>
                                                     <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="1" id="qmB-Vd-HhH"/>
                                                     </constraints>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="km_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="2ni-85-7ey">
-                                                    <rect key="frame" x="152" y="50" width="10" height="10"/>
+                                                    <rect key="frame" x="152" y="55" width="10" height="10"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="10" id="40S-Yw-ggk"/>
                                                         <constraint firstAttribute="width" constant="10" id="yOM-lg-OyV"/>
@@ -286,7 +286,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6fl-G0-AtW">
-                                                    <rect key="frame" x="164" y="47" width="67" height="15"/>
+                                                    <rect key="frame" x="164" y="52" width="67" height="15"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="15" id="auH-Zy-Uzc"/>
                                                     </constraints>
@@ -304,9 +304,9 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="14" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YsR-jP-AIp">
-                                                    <rect key="frame" x="5" y="5" width="216" height="20"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <color key="textColor" red="0.066574536423903916" green="0.47324240245039567" blue="0.96234184118673638" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <rect key="frame" x="5" y="5" width="216" height="25"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.17333487149999999" green="0.48470761289999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -315,18 +315,18 @@
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="XiA-Pp-M1Q" secondAttribute="trailing" id="0gY-Ht-eyb"/>
-                                            <constraint firstItem="9ZU-TR-mRF" firstAttribute="top" secondItem="x6g-Yg-s1C" secondAttribute="top" constant="40" id="2zL-me-LcQ"/>
+                                            <constraint firstItem="9ZU-TR-mRF" firstAttribute="top" secondItem="x6g-Yg-s1C" secondAttribute="top" constant="45" id="2zL-me-LcQ"/>
                                             <constraint firstItem="9ZU-TR-mRF" firstAttribute="leading" secondItem="7si-1v-3Bs" secondAttribute="trailing" constant="5" id="6kd-qz-GtP"/>
                                             <constraint firstAttribute="bottom" secondItem="XiA-Pp-M1Q" secondAttribute="bottom" constant="17" id="8Jx-kI-kf7"/>
-                                            <constraint firstItem="7si-1v-3Bs" firstAttribute="top" secondItem="x6g-Yg-s1C" secondAttribute="top" constant="30" id="8tb-zB-cde"/>
+                                            <constraint firstItem="7si-1v-3Bs" firstAttribute="top" secondItem="x6g-Yg-s1C" secondAttribute="top" constant="35" id="8tb-zB-cde"/>
                                             <constraint firstAttribute="trailing" secondItem="7si-1v-3Bs" secondAttribute="trailing" constant="90" id="BHc-BT-5r3"/>
                                             <constraint firstAttribute="bottom" secondItem="7si-1v-3Bs" secondAttribute="bottom" constant="2" id="DN3-Ne-ozJ"/>
-                                            <constraint firstItem="2ni-85-7ey" firstAttribute="top" secondItem="x6g-Yg-s1C" secondAttribute="top" constant="50" id="DOp-qy-eNg"/>
+                                            <constraint firstItem="2ni-85-7ey" firstAttribute="top" secondItem="x6g-Yg-s1C" secondAttribute="top" constant="55" id="DOp-qy-eNg"/>
                                             <constraint firstItem="2ni-85-7ey" firstAttribute="leading" secondItem="9ZU-TR-mRF" secondAttribute="trailing" constant="5" id="EBh-IX-z7b"/>
                                             <constraint firstItem="YsR-jP-AIp" firstAttribute="leading" secondItem="x6g-Yg-s1C" secondAttribute="leading" constant="5" id="NLv-i5-3DA"/>
                                             <constraint firstItem="7si-1v-3Bs" firstAttribute="leading" secondItem="x6g-Yg-s1C" secondAttribute="leading" constant="2" id="OT1-Hs-sMI"/>
                                             <constraint firstItem="7si-1v-3Bs" firstAttribute="top" secondItem="YsR-jP-AIp" secondAttribute="bottom" constant="5" id="UXH-X7-Z88"/>
-                                            <constraint firstItem="6fl-G0-AtW" firstAttribute="top" secondItem="x6g-Yg-s1C" secondAttribute="top" constant="47" id="WEv-Pe-PmJ"/>
+                                            <constraint firstItem="6fl-G0-AtW" firstAttribute="top" secondItem="x6g-Yg-s1C" secondAttribute="top" constant="52" id="WEv-Pe-PmJ"/>
                                             <constraint firstItem="XiA-Pp-M1Q" firstAttribute="leading" secondItem="Jf2-Pn-v4Y" secondAttribute="trailing" constant="2" id="bmH-Mh-8DY"/>
                                             <constraint firstAttribute="bottom" secondItem="9ZU-TR-mRF" secondAttribute="bottom" constant="10" id="dah-TJ-IJd"/>
                                             <constraint firstAttribute="trailing" secondItem="6fl-G0-AtW" secondAttribute="trailing" id="eqY-EK-m1N"/>
@@ -401,7 +401,7 @@
                                             <color key="titleColor" red="0.087655348709999997" green="0.134951504" blue="0.94752126960000005" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xIc-ti-6cp">
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xIc-ti-6cp">
                                         <rect key="frame" x="13" y="12" width="62" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="章节考点"/>
@@ -409,16 +409,32 @@
                                             <action selector="downButtonClick:" destination="Fee-mn-zWi" eventType="touchUpInside" id="5dP-Oi-Ns0"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AuB-ng-cPk">
-                                        <rect key="frame" x="117" y="12" width="76" height="30"/>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AuB-ng-cPk">
+                                        <rect key="frame" x="91" y="12" width="76" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="模拟试卷"/>
                                         <connections>
                                             <action selector="downButtonClick:" destination="Fee-mn-zWi" eventType="touchUpInside" id="FAM-UU-HGN"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ym4-Jm-niX">
+                                        <rect key="frame" x="181" y="12" width="66" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="每周精选"/>
+                                        <connections>
+                                            <action selector="downButtonClick:" destination="Fee-mn-zWi" eventType="touchUpInside" id="mUd-Rs-BxI"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rq2-g3-whg">
+                                        <rect key="frame" x="267" y="10" width="76" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="练习记录"/>
+                                        <connections>
+                                            <action selector="downButtonClick:" destination="Fee-mn-zWi" eventType="touchUpInside" id="wjN-0A-lrA"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.70435138019999999" green="0.84245411569999995" blue="0.93819535340000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="e0t-mg-M5v"/>
                                 </constraints>
@@ -721,9 +737,46 @@
                     <view key="view" contentMode="scaleToFill" id="s7S-wY-6yA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="28" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OCF-Hg-IwE">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellsub" rowHeight="28" id="Hrx-vw-21L">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="28"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hrx-vw-21L" id="9dR-a5-wWf">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="27"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="7Ly-jy-dRb" id="gUJ-28-Tci"/>
+                                    <outlet property="delegate" destination="7Ly-jy-dRb" id="9tO-3k-sLg"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="OCF-Hg-IwE" secondAttribute="bottom" id="0Nu-r5-xsw"/>
+                            <constraint firstItem="OCF-Hg-IwE" firstAttribute="top" secondItem="s7S-wY-6yA" secondAttribute="top" id="3ht-JS-9O2"/>
+                            <constraint firstItem="OCF-Hg-IwE" firstAttribute="leading" secondItem="s7S-wY-6yA" secondAttribute="leading" id="OnY-VE-I4T"/>
+                            <constraint firstAttribute="trailing" secondItem="OCF-Hg-IwE" secondAttribute="trailing" id="TlS-Kr-lPN"/>
+                            <constraint firstItem="OCF-Hg-IwE" firstAttribute="top" secondItem="KO7-sI-Ztg" secondAttribute="bottom" id="Y2p-WW-BPR"/>
+                            <constraint firstItem="plN-ZB-95V" firstAttribute="top" secondItem="OCF-Hg-IwE" secondAttribute="bottom" id="a6q-3y-tvl"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Y2p-WW-BPR"/>
+                                <exclude reference="a6q-3y-tvl"/>
+                            </mask>
+                        </variation>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="myTableView" destination="OCF-Hg-IwE" id="xyD-tZ-1dg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LJU-lJ-Tej" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
