--- a/TyDtk/ActiveView.xib
+++ b/TyDtk/ActiveView.xib
@@ -83,6 +83,9 @@
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
                     <state key="normal" title="用激活码做题"/>
+                    <connections>
+                        <action selector="activeBtnClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="fma-Kx-DjB"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="如何获取激活码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wEA-So-WGa">
                     <rect key="frame" x="265" y="171" width="125" height="20"/>
